Fix horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 0.7em;
   letter-spacing: 1px;
   padding: 20px;
   text-align: center;
@@ -110,7 +110,7 @@ nav h1 a {
   height: auto;
   background-color: #10224e;
   align-items: center;
-	padding: 10px;
+	padding: 10px 0 2px;
 	text-align: center ;
 }
 .filter-options h2 {
@@ -234,7 +234,6 @@ nav h1 a {
 }
 #restaurant-img {
 	width: 100%;
-	border-radius: 30px 0 0;
 }
 #restaurant-address {
   font-size: 1.5em;
@@ -250,6 +249,10 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
+}
+#resraurant-container {
+  position: relative;
+  width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
@@ -376,7 +379,7 @@ nav h1 a {
 	#breadcrumb {
     width: calc(50% - 80px);
   }
-	inside #footer {
+	.inside #footer {
     bottom: 0;
     position: absolute;
     width: 45%;
